--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -17,8 +17,8 @@ jobs:
         with:
           go-version: '1.19'
 
-      - name: Build
-        run: go build -v ./...
-
-      - name: Test
-        run: go test -v ./...
+      - name: Build and Test async
+        working-directory: ./async
+        run: |
+          go build -v ./...
+          go test -v ./...
