--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -27,4 +27,4 @@ jobs:
       - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
         uses: tj-actions/coverage-badge-go@v2
         with:
-          filename: coverage.out
+          filename: ./async/coverage.out
