--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -34,14 +34,14 @@ jobs:
         uses: tj-actions/verify-changed-files@v12
         id: verify-changed-files
         with:
-          files: ./async/README.md
+          files: ./async/readme.md
 
       - name: Commit changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md
+          git add ./async/readme.md
           git commit -m "chore: Updated coverage badge."
           
       - name: Push changes
