--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -6,21 +6,31 @@ on:
       - 'async/**'
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
+    name: Update coverage badge
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          go-version: '1.19'
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
-      - name: Build and Test
+      - name: Setup go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.14.4'
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Run Test
         working-directory: ./async
         run: |
-          go build -v ./...
           go test -v ./... -covermode=count -coverprofile=coverage.out
           go tool cover -func=coverage.out -o=coverage.out
 
@@ -28,7 +38,6 @@ jobs:
         uses: tj-actions/coverage-badge-go@v2
         with:
           filename: ./async/coverage.out
-
 
       - name: Verify Changed files
         uses: tj-actions/verify-changed-files@v12
@@ -43,12 +52,13 @@ jobs:
           git config --local user.name "GitHub Action"
           git add ./async/readme.md
           git commit -m "chore: Updated coverage badge."
-          
+
       - name: Push changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ github.token }}
           branch: ${{ github.head_ref }}
+
 
 
