--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -31,6 +31,7 @@ jobs:
       - name: Run Test
         working-directory: ./async
         run: |
+          go build -v ./...
           go test -v ./... -covermode=count -coverprofile=coverage.out
           go tool cover -func=coverage.out -o=coverage.out
 
