--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -36,7 +36,7 @@ jobs:
           go tool cover -func=coverage.out -o=coverage.out
 
       - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
-        uses: tj-actions/coverage-badge-go@v2
+        uses: tj-actions/coverage-badge-go@v2 -target=async/README.md
         with:
           filename: ./async/coverage.out
 
@@ -44,14 +44,14 @@ jobs:
         uses: tj-actions/verify-changed-files@v12
         id: verify-changed-files
         with:
-          files: README.md
+          files: async/README.md
 
       - name: Commit changes
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add README.md
+          git add async/README.md
           git commit -m "chore: Updated coverage badge."
 
       - name: Push changes
