--- a/.github/workflows/gotest.yaml
+++ b/.github/workflows/gotest.yaml
@@ -36,9 +36,10 @@ jobs:
           go tool cover -func=coverage.out -o=coverage.out
 
       - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
-        uses: tj-actions/coverage-badge-go@v2 -target=async/README.md
+        uses: tj-actions/coverage-badge-go@v2
         with:
           filename: ./async/coverage.out
+          target: async/README.md
 
       - name: Verify Changed files
         uses: tj-actions/verify-changed-files@v12
